--- a/src/styles/global.module.css
+++ b/src/styles/global.module.css
@@ -7,25 +7,7 @@ body{
 	user-select: none;
 	width: 100%;
 	height: 100%;
-	overflow: auto;
-}
-
-.landing-card-container{
-	text-align: center;
-	white-space: nowrap;
-}
-
-.landing-header-menu{
-	position: relative;
-	width: 100%;
-	color: white;
-	text-align: right;
-	font-size: 3vh;
-	right: 20px;
-}
-
-.landing-header-menu > p{
-	margin: 0;
+	overflow: hidden;
 }
 
 .site-header-menu{
