--- a/src/styles/global.module.css
+++ b/src/styles/global.module.css
@@ -1,13 +1,12 @@
 body{
-	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	color: white;
 	background: url("../images/bg.png");
 	margin: 0;
-	margin-top: 30px;
+	margin-top: 10px;
 	user-select: none;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 }
 
 .site-header-menu{
